change background color to green when number match

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Game !</title>
     <link rel="stylesheet" href="./JsFolder/stylesheet/style.css">
+    <script src="/JsFolder/index.js" defer></script>
 </head>
 <body>
     <header>
@@ -24,7 +25,7 @@
           <p class="highscore">Highest Score:<span>0</span></p>
        </section>
      </main>
-    <script src="/JsFolder/index.js"></script>
+    
     <footer class="copy">
         copyrigth &copy; 2021
     </footer>
